--- a/src/less/app.less
+++ b/src/less/app.less
@@ -35,6 +35,17 @@ body {
 }
 
 /***************components******************/
+.article-list {
+  .ctrl-item {
+    width: 90px;
+    .ion-trash-b {
+      font-size: 20px;
+      float: right;
+      color: #f43530;
+    }
+  }
+
+}
 
 /***************containers*****************/
 #app-container {
